--- a/apps/user/rpc/etc/dev/user.yaml
+++ b/apps/user/rpc/etc/dev/user.yaml
@@ -2,16 +2,21 @@ Name: user.rpc
 ListenOn: 0.0.0.0:10000
 Etcd:
   Hosts:
-  - 192.168.117.24:3379
+  - 192.168.117.24:2379
   Key: user.rpc
 
 Mysql:
-  DataSource: root:sai-im@tcp(192.168.117.24:13306)/sai-im?charset=utf8mb4
+  DataSource: root:sai-im@tcp(192.168.117.24:3306)/sai-im?charset=utf8mb4
+
+Redisx:
+  Host: 192.168.117.24:16379
+  Type: node
+  Pass: sai-im
 
 Cache:
-  - Host: 192.168.117.24:16379
+  - Host: 192.168.117.24:6379
     Type: node
-    Pass: sai-im
+    Pass: "sai-im"
 
 Jwt:
   AccessSecret: mingri
