✨feat: 消息队列已读消息处理

--- a/apps/task/mq/etc/dev/task.yaml
+++ b/apps/task/mq/etc/dev/task.yaml
@@ -11,6 +11,15 @@ MsgChatTransfer:
   Offset: first
   Consumers: 1
 
+MsgReadTransfer:
+  Name: MsgReadTransfer
+  Brokers:
+    - 192.168.117.24:9092
+  Group: kafka
+  Topic: MsgReadTransfer
+  Offset: first
+  Consumers: 1
+
 Redisx:
   Host: 192.168.117.24:16379
   Type: node
