--- a/deploy/dockerfile/Dockerfile_social_api_dev
+++ b/deploy/dockerfile/Dockerfile_social_api_dev
@@ -8,8 +8,8 @@ RUN echo -e "https://mirrors.aliyun.com/alpine/v3.15/main\nhttps://mirrors.aliyu
     echo "Asia/Shanghai" >  /etc/timezone
 ENV TZ=Asia/Shanghai
 
-ARG SERVER_NAME=user
-ARG SERVER_TYPE=rpc
+ARG SERVER_NAME=social
+ARG SERVER_TYPE=api
 
 ENV RUN_BIN bin/${SERVER_NAME}-${SERVER_TYPE}
 ENV RUN_CONF /${SERVER_NAME}/conf/${SERVER_NAME}.yaml
