--- a/deploy/dockerfile/Dockerfile_social_rpc_dev
+++ b/deploy/dockerfile/Dockerfile_social_rpc_dev
@@ -8,7 +8,7 @@ RUN echo -e "https://mirrors.aliyun.com/alpine/v3.15/main\nhttps://mirrors.aliyu
     echo "Asia/Shanghai" >  /etc/timezone
 ENV TZ=Asia/Shanghai
 
-ARG SERVER_NAME=user
+ARG SERVER_NAME=social
 ARG SERVER_TYPE=rpc
 
 ENV RUN_BIN bin/${SERVER_NAME}-${SERVER_TYPE}
