--- a/deploy/dockerfile/Dockerfile_user_api_dev
+++ b/deploy/dockerfile/Dockerfile_user_api_dev
@@ -9,7 +9,7 @@ RUN echo -e "https://mirrors.aliyun.com/alpine/v3.15/main\nhttps://mirrors.aliyu
 ENV TZ=Asia/Shanghai
 
 ARG SERVER_NAME=user
-ARG SERVER_TYPE=rpc
+ARG SERVER_TYPE=api
 
 ENV RUN_BIN bin/${SERVER_NAME}-${SERVER_TYPE}
 ENV RUN_CONF /${SERVER_NAME}/conf/${SERVER_NAME}.yaml
