--- a/apps/social/api/etc/dev/social.yaml
+++ b/apps/social/api/etc/dev/social.yaml
@@ -2,23 +2,28 @@ Name: social
 Host: 0.0.0.0
 Port: 8881
 
-SocialRpc:
-  Etcd:
-    Hosts:
-      - 192.168.117.24:3379
-    Key: social.rpc
-
 UserRpc:
   Etcd:
     Hosts:
-      - 192.168.117.24:3379
+      - 106.14.194.111:3379
     Key: user.rpc
+
+SocialRpc:
+  Etcd:
+    Hosts:
+      - 106.14.194.111:3379
+    Key: social.rpc
 
 ImRpc:
   Etcd:
     Hosts:
-      - 192.168.117.24:3379
+      - 106.14.194.111:3379
     Key: im.rpc
 
+Redisx:
+  Host: 106.14.194.111:16379
+  Type: node
+  Pass: sai-im
+
 JwtAuth:
-  AccessSecret: mingri
+  AccessSecret: sai-im
