🔧chore: 链路追踪配置

--- a/apps/social/api/etc/dev/social.yaml
+++ b/apps/social/api/etc/dev/social.yaml
@@ -27,3 +27,8 @@ Redisx:
 
 JwtAuth:
   AccessSecret: sai-im
+
+Telemetry:
+  Name: social.api
+  Endpoint: http://118.178.120.11:14268/api/traces
+  Batcher: jaeger
