--- a/apps/social/rpc/etc/dev/social.yaml
+++ b/apps/social/rpc/etc/dev/social.yaml
@@ -12,3 +12,8 @@ Cache:
   - Host: 192.168.117.24:16379
     Type: node
     Pass: sai-im
+
+Telemetry:
+  Name: social.rpc
+  Endpoint: http://118.178.120.11:14268/api/traces
+  Batcher: jaeger
