--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -161,6 +161,43 @@ services:
     networks:
       sai-im:
 
+# ELK（Logstash -> Elasticsearch -> Kibana）日志收集架构
+  elasticsearch:
+    image: elasticsearch:7.17.4
+    volumes:
+      - /etc/localtime:/etc/localtime
+      #🔥 需要对/components/elasticsearch/data增加使用权限，不然会出现错误信息
+      - ./components/elasticsearch/data:/usr/share/elasticsearch/data
+    ports:
+      - '9200:9200'
+      - '9300:9300'
+    container_name: elasticsearch
+    restart: always
+    environment:
+      - 'cluster.name=elasticsearch'
+      - 'discovery.type=single-node'
+      - 'ES_JAVA_OPTS=-Xms1024m -Xmx1024m'
+    networks:
+      easy-chat:
+
+  kibana:
+    image: kibana:7.17.4
+    container_name: kibana
+    restart: always
+    volumes:
+      - /etc/localtime:/etc/localtime
+      #🔥 注意配置路径
+      - ./components/kibana/kibana.yml:/usr/share/kibana/config/kibana.yml
+    ports:
+      - '5601:5601'
+    #🔥 启动时与 elasticsearch 进行连接
+    links:
+      - elasticsearch
+    depends_on:
+      - elasticsearch
+    networks:
+      easy-chat:
+
 networks:
   sai-im:
     driver: bridge
