--- a/components/logstash/pipeline/logstash.conf
+++ b/components/logstash/pipeline/logstash.conf
@@ -1,28 +1,33 @@
 input{
-    # 收集mysql的慢查询日志
-    file {
-        # 表示输入的日志文件类型，可以用于在filter中进行条件判断或分类处理。
-        type => "mysql-slow"
-        path => "/var/logs/mysql-slow.log"
-        # 表示logstash开始读取日志文件的位置，可以选择为beginning（从头开始）或end（从末尾开始）。
-        # start_position => "beginning"
-        # 表示对输入的日志文件内容进行多行处理，即将多行日志合并为单一的事件进行处理。
-        codec => multiline {
-              # 以"# Time:"为分隔符，中间的所有多行内容归为一行并填充到Event时间中
-              pattern => "^# Time:"
-              # 表示是否对指定的pattern进行否定匹配，即如果为true，则表示匹配不到pattern的行将被合并到上一个事件中；如果为false，则表示只有匹配到pattern的行才会被合并到上一个事件中。
-              negate => true
-              # 表示合并多行日志时，是将匹配的行合并到上一个事件的头部（previous）还是尾部（next）。
-              what => "previous"
-        }
+    #✨ 直接读取 由filebeat采集并推送给logstash的日志信息
+    beats {
+        port => 5044
     }
 
+    # 收集mysql的慢查询日志
+;     file {
+;         # 表示输入的日志文件类型，可以用于在filter中进行条件判断或分类处理。
+;         type => "mysql-slow"
+;         path => "/var/logs/mysql-slow.log"
+;         # 表示logstash开始读取日志文件的位置，可以选择为beginning（从头开始）或end（从末尾开始）。
+;         # start_position => "beginning"
+;         # 表示对输入的日志文件内容进行多行处理，即将多行日志合并为单一的事件进行处理。
+;         codec => multiline {
+;               # 以"# Time:"为分隔符，中间的所有多行内容归为一行并填充到Event时间中
+;               pattern => "^# Time:"
+;               # 表示是否对指定的pattern进行否定匹配，即如果为true，则表示匹配不到pattern的行将被合并到上一个事件中；如果为false，则表示只有匹配到pattern的行才会被合并到上一个事件中。
+;               negate => true
+;               # 表示合并多行日志时，是将匹配的行合并到上一个事件的头部（previous）还是尾部（next）。
+;               what => "previous"
+;         }
+;     }
+;
     # 收集apisix中的请求日志信息
-    file {
-        type => "apisix"
-        path => "/var/logs/apisix/access.log"
-        start_position => "beginning"
-    }
+;     file {
+;         type => "apisix"
+;         path => "/var/logs/apisix/access.log"
+;         start_position => "beginning"
+;     }
 }
 
 filter {
@@ -72,7 +77,7 @@ output{
     if [type] == "apisix" {
         elasticsearch {
             hosts => ["elasticsearch:9200"]
-            index => "apisix_access_logs"
+            index => "beats_apisix_access_logs" #✨验证日志信息来源于filebeat
         }
     }
 
