--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -218,6 +218,24 @@ services:
       - elasticsearch
     networks:
       sai-im:
+        
+  prometheus:
+    image: prom/prometheus:v2.28.1
+    container_name: prometheus.yml
+    environment:
+      TZ: Asia/Shanghai
+    volumes:
+      - ./components/prometheus.yml/config/prometheus.yml.yml:/etc/prometheus.yml/prometheus.yml.yml
+      - ./components/prometheus.yml/data:/prometheus.yml
+    command:
+      - '--config.file=/etc/prometheus.yml/prometheus.yml.yml'
+      - '--storage.tsdb.path=/prometheus.yml'
+    restart: always
+    user: root
+    ports:
+      - 9090:9090
+    networks:
+      sai-im:
 
 networks:
   sai-im:
