--- a/components/prometheus/config/prometheus.yml
+++ b/components/prometheus/config/prometheus.yml
@@ -1,8 +1,21 @@
 scrape_configs:
-  - job_name: myapp-test
-    #🔥采集请求的url地址（因为使用的是直接采集的方式：在项目中编写程序对要监测的客户端进行埋点采集数据）
-    metrics_path: /metrics
-    # 具体要访问服务的地址
+  # 测试程序监听
+#  - job_name: myapp-test
+#    #🔥采集请求的url地址（因为使用的是直接采集的方式：在项目中编写程序对要监测的客户端进行埋点采集数据）
+#    metrics_path: /metrics
+#    # 具体要访问服务的地址
+#    static_configs:
+#      - targets:
+#          - 192.168.117.80:1234
+
+  - job_name: user-api
+    metrics_path: /user-api
     static_configs:
       - targets:
-          - 192.168.117.80:1234
+          - 192.168.117.10:7888
+
+  - job_name: user-rpc
+    metrics_path: /user-rpc
+    static_configs:
+      - targets:
+          - 192.168.117.10:7999
