--- a/apps/user/api/etc/dev/user.yaml
+++ b/apps/user/api/etc/dev/user.yaml
@@ -16,3 +16,8 @@ Redisx:
 JwtAuth:
   AccessSecret: mingri
   AccessExpire: 8640000
+
+Prometheus:
+  Host: 0.0.0.0
+  Port: 7888
+  Path: /user-api
