--- a/apps/user/rpc/etc/dev/user.yaml
+++ b/apps/user/rpc/etc/dev/user.yaml
@@ -28,3 +28,9 @@ Telemetry:
   Endpoint: http://118.178.120.11:14268/api/traces
   # 服务的对象类型
   Batcher: jaeger
+
+#✨ go-zero已集成prometheus，只需配置即可
+Prometheus:
+  Host: 0.0.0.0
+  Port: 7999
+  Path: /user-rpc
